# PiKv

./: .gitignore  CMakeLists.txt  README.md  mc.sh  mi.sh  mm.sh  p_0.desc  xc.sh
PiApp/: main.py
PiCim/: CMakeLists.txt  PiCim.cpp  PiCim.hpp  PiCim.py  simple.py
PiDl/: CMakeLists.txt  PiDl.cpp  PiDl.hpp  PiDlConfig.hpp  dlib_anet.hpp  dlib_cv.hpp
PiKv/: PiMien.kv
PiMien/: CMakeLists.txt  KvMien.kv  KvMien.py  PiMien.cpp  PiMien.hpp  PiMien.kv  PiMien.py
dl/: CMakeLists.txt  dl.cpp  dl.hpp  dl_anet.hpp  dl_config.hpp
